--- a/.github/workflows/algolia-publish.yml
+++ b/.github/workflows/algolia-publish.yml
@@ -4,12 +4,30 @@
 on:
   workflow_call:
     secrets:
+      githubToken:
+        required: true
+      algoliaAppId:
+        required: true
+      algoliaAdminApiKey:
+        required: true
+      algoliaIndexName:
+        required: true
+    inputs:
       domain:
         required: true
+        description: "The root domain and path that will prefix all URLs (ex: "https://www.the-guild.dev/graphql/codegen/")
       lockFilePath:
-        required: true
+        required: false
+        default: "./algolia-lockfile.json"
+        description: "Relative path from `website/` to the Algolia lockfile"
       docsBaseDir:
-        required: true
+        required: false
+        default: "./src/pages/"
+        description: "Relative path from `website/` to nextra markdown pages root folder"
+      nodeVersion:
+        required: false
+        type: number
+        default: 18
 
 jobs:
   algolia-push-records:
@@ -18,26 +36,26 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Setup env
         uses: the-guild-org/shared-config/setup@main
         with:
-          nodeVersion: 18
+          nodeVersion: ${{inputs.nodeVersion}}
 
       - name: Algolia push
-        run: yarn workspace website theguild-nextra-algolia --publish -o ${{ secrets.lockFilePath }} --domain ${{ secrets.domain }} --docsBaseDir ${{ secrets.docsBaseDir }}
-
-      - name: Prettier
-        run: yarn prettier
-
-      - name: Compare
-        run: git diff ${{ secrets.lockFilePath }}
+        run: yarn workspace website theguild-nextra-algolia --publish -o ${{ inputs.lockFilePath }} --domain ${{ inputs.domain }} --docsBaseDir ${{ inputs.docsBaseDir }}
+        env:
+          ALGOLIA_APP_ID: ${{ secrets.algoliaAppId }}
+          ALGOLIA_ADMIN_API_KEY: ${{ secrets.algoliaAdminApiKey }}
+          ALGOLIA_INDEX_NAME: ${{ secrets.algoliaIndexName}}
 
       - name: Diff to file
         if: always()
         id: diff_result
         run: |
-          OUTPUT=$(git diff ${{ secrets.lockFilePath }})
+          OUTPUT=$(git diff ${{ inputs.lockFilePath }})
           OUTPUT="${OUTPUT//'%'/'%25'}"
           OUTPUT="${OUTPUT//$'\n'/'%0A'}"
           OUTPUT="${OUTPUT//$'\r'/'%0D'}"
@@ -47,6 +65,8 @@ jobs:
         if: always() && contains(steps.diff_result.outputs.result, 'diff')
         uses: EndBug/add-and-commit@v9
         with:
-          commit: ${{ secrets.lockFilePath }}
+          commit: ${{ inputs.lockFilePath }}
           message: Update algolia-lockfile.json
           default_author: github_actions
+        env:
+          GITHUB_TOKEN: ${{ secrets.githubToken }}
