fix(algolia): missing `type`s on `inputs`

--- a/.github/workflows/algolia-integrity.yml
+++ b/.github/workflows/algolia-integrity.yml
@@ -5,16 +5,20 @@ on:
   workflow_call:
     secrets:
       githubToken:
+        type: string
         required: true
     inputs:
       domain:
+        type: string
         required: true
         description: "The root domain and path that will prefix all URLs (ex: "https://www.the-guild.dev/graphql/codegen/")
       lockFilePath:
+        type: string
         required: false
         default: "./algolia-lockfile.json"
         description: "Relative path from `website/` to the Algolia lockfile"
       docsBaseDir:
+        type: string
         required: false
         default: "./src/pages/"
         description: "Relative path from `website/` to nextra markdown pages root folder"
