--- a/.github/workflows/algolia-integrity.yml
+++ b/.github/workflows/algolia-integrity.yml
@@ -11,6 +11,10 @@ on:
         type: string
         required: true
         description: "The root domain and path that will prefix all URLs (ex: 'https://www.the-guild.dev/graphql/codegen/')"
+      source:
+        type: string
+        required: true
+        description: "(ex: 'Code Generator')"
       lockFilePath:
         type: string
         required: false
@@ -44,7 +48,7 @@ jobs:
           nodeVersion: ${{inputs.nodeVersion}}
 
       - name: Algolia generate
-        run: yarn workspace website theguild-nextra-algolia -o ${{ inputs.lockFilePath }} --domain ${{ inputs.domain }} --docsBaseDir ${{ inputs.docsBaseDir }}
+        run: yarn workspace website theguild-nextra-algolia -o ${{ inputs.lockFilePath }} --source ${{ $inputs.source }} --domain ${{ inputs.domain }} --docsBaseDir ${{ inputs.docsBaseDir }}
 
       - name: Diff to file
         if: always()
