--- a/.github/workflows/algolia-integrity.yml
+++ b/.github/workflows/algolia-integrity.yml
@@ -48,7 +48,7 @@ jobs:
           nodeVersion: ${{inputs.nodeVersion}}
 
       - name: Algolia generate
-        run: yarn workspace website theguild-nextra-algolia -o ${{ inputs.lockFilePath }} --source ${{ $inputs.source }} --domain ${{ inputs.domain }} --docsBaseDir ${{ inputs.docsBaseDir }}
+        run: yarn workspace website theguild-nextra-algolia -o ${{ inputs.lockFilePath }} --source ${{ inputs.source }} --domain ${{ inputs.domain }} --docsBaseDir ${{ inputs.docsBaseDir }}
 
       - name: Diff to file
         if: always()
