--- a/.github/workflows/algolia-integrity.yml
+++ b/.github/workflows/algolia-integrity.yml
@@ -29,6 +29,13 @@ on:
         required: false
         type: number
         default: 18
+      websiteDirectory:
+        required: false
+        default: 'website/'
+      packageManager:
+        description: 'Package Manager'
+        required: false
+        default: yarn
 
 jobs:
   algolia-records-check:
@@ -48,11 +55,13 @@ jobs:
           nodeVersion: ${{inputs.nodeVersion}}
 
       - name: Algolia generate
-        run: yarn workspace website theguild-nextra-algolia -o ${{ inputs.lockFilePath }} --source ${{ inputs.source }} --domain ${{ inputs.domain }} --docsBaseDir ${{ inputs.docsBaseDir }}
+        run: ${{ inputs.packageManager }} run theguild-nextra-algolia -o ${{ inputs.lockFilePath }} --source ${{ inputs.source }} --domain ${{ inputs.domain }} --docsBaseDir ${{ inputs.docsBaseDir }}
+        working-directory: ${{ inputs.websiteDirectory }}
 
       - name: Diff to file
         if: always()
         id: diff_result
+        working-directory: ${{ inputs.websiteDirectory }}
         run: |
           OUTPUT=$(git diff origin/${{ github.base_ref }}.. -- ${{ inputs.lockFilePath }})
           OUTPUT="${OUTPUT//'%'/'%25'}"
