fix(algolia): missing `inputs` `type`

--- a/.github/workflows/algolia-integrity.yml
+++ b/.github/workflows/algolia-integrity.yml
@@ -31,10 +31,12 @@ on:
         default: 18
       websiteDirectory:
         required: false
+        type: string
         default: 'website/'
       packageManager:
         description: 'Package Manager'
-        required: false
+        required: 
+        type: string
         default: yarn
 
 jobs:
