--- a/.github/workflows/algolia-integrity.yml
+++ b/.github/workflows/algolia-integrity.yml
@@ -35,7 +35,7 @@ on:
         default: 'website/'
       packageManager:
         description: 'Package Manager'
-        required: 
+        required: false
         type: string
         default: yarn
 
