--- a/.github/workflows/algolia-publish.yml
+++ b/.github/workflows/algolia-publish.yml
@@ -61,7 +61,7 @@ jobs:
           nodeVersion: ${{inputs.nodeVersion}}
 
       - name: Algolia push
-        run: ${{ inputs.packageManager }} run theguild-nextra-algolia --publish -o ${{ inputs.lockFilePath }} --source ${{ inputs.source }} --domain ${{ inputs.domain }} --docsBaseDir ${{ inputs.docsBaseDir }}
+        run: ${{ inputs.packageManager }} run theguild-nextra-algolia --publish -o ${{ inputs.lockFilePath }} --source '${{ inputs.source }}' --domain ${{ inputs.domain }} --docsBaseDir ${{ inputs.docsBaseDir }}
         working-directory: ${{ inputs.websiteDirectory }}
         env:
           ALGOLIA_APP_ID: ${{ secrets.algoliaAppId }}
