--- a/.github/workflows/algolia-integrity.yml
+++ b/.github/workflows/algolia-integrity.yml
@@ -18,7 +18,7 @@ on:
       lockFilePath:
         type: string
         required: false
-        default: "./algolia-lockfile.json"
+        default: "algolia-lockfile.json"
         description: "Relative path from `website/` to the Algolia lockfile"
       docsBaseDir:
         type: string
@@ -32,7 +32,7 @@ on:
       websiteDirectory:
         required: false
         type: string
-        default: 'website/'
+        default: './website/'
       packageManager:
         description: 'Package Manager'
         required: false
@@ -63,9 +63,8 @@ jobs:
       - name: Diff to file
         if: always()
         id: diff_result
-        working-directory: ${{ inputs.websiteDirectory }}
         run: |
-          OUTPUT=$(git diff origin/${{ github.base_ref }}.. -- ${{ inputs.lockFilePath }})
+          OUTPUT=$(git diff origin/${{ github.base_ref }}.. -- ${{ inputs.websiteDirectory }}${{ inputs.lockFilePath }})
           OUTPUT="${OUTPUT//'%'/'%25'}"
           OUTPUT="${OUTPUT//$'\n'/'%0A'}"
           OUTPUT="${OUTPUT//$'\r'/'%0D'}"
