add `package.json` to `exports` field

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -15,7 +15,8 @@
   "private": false,
   "exports": {
     ".": "./src/index.cjs",
-    "./*": "./src/*.cjs"
+    "./*": "./src/*.cjs",
+    "./package.json": "./package.json"
   },
   "publishConfig": {
     "access": "public"
