fix(algolia): `packageManager` for `setup-env`

--- a/.github/workflows/algolia-integrity.yml
+++ b/.github/workflows/algolia-integrity.yml
@@ -60,6 +60,7 @@ jobs:
         uses: the-guild-org/shared-config/setup@main
         with:
           nodeVersion: ${{inputs.nodeVersion}}
+          packageManager: ${{inputs.packageManager}}
           workingDirectory: ${{ inputs.setupEnvWorkingDirectory }}
 
       - name: Algolia generate
