--- a/.github/workflows/algolia-publish.yml
+++ b/.github/workflows/algolia-publish.yml
@@ -1,4 +1,4 @@
-# Note: this is a shared pipeline used by other repositories. 
+# Note: this is a shared pipeline used by other repositories.
 # Docs: https://docs.github.com/en/actions/using-workflows/reusing-workflows
 
 on:
@@ -24,13 +24,13 @@ on:
       lockFilePath:
         type: string
         required: false
-        default: "algolia-lockfile.json"
-        description: "Relative path from `website/` to the Algolia lockfile"
+        default: 'algolia-lockfile.json'
+        description: 'Relative path from `website/` to the Algolia lockfile'
       docsBaseDir:
         type: string
         required: false
-        default: "./src/pages/"
-        description: "Relative path from `website/` to nextra markdown pages root folder"
+        default: './src/pages/'
+        description: 'Relative path from `website/` to nextra markdown pages root folder'
       nodeVersion:
         required: false
         type: number
@@ -89,7 +89,7 @@ jobs:
         if: always() && contains(steps.diff_result.outputs.result, 'diff')
         uses: EndBug/add-and-commit@v9
         with:
-          commit: "${{ inputs.websiteDirectory }}${{ inputs.lockFilePath }}"
+          commit: '${{ inputs.websiteDirectory }}${{ inputs.lockFilePath }}'
           message: Update algolia-lockfile.json
           default_author: github_actions
         env:
