--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -6,10 +6,6 @@
     "url": "the-guild-org/shared-config",
     "directory": "packages/eslint-config"
   },
-  "keywords": [
-    "eslint",
-    "eslint-config"
-  ],
   "author": "The Guild (https://the-guild.dev)",
   "license": "MIT",
   "private": false,
@@ -18,8 +14,12 @@
     "./*": "./src/*.cjs",
     "./package.json": "./package.json"
   },
-  "publishConfig": {
-    "access": "public"
+  "keywords": [
+    "eslint",
+    "eslint-config"
+  ],
+  "peerDependencies": {
+    "eslint": "^8"
   },
   "dependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
@@ -27,7 +27,9 @@
     "@typescript-eslint/parser": "^5.36.2",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.3.0",
     "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-sonarjs": "^0.16.0",
     "eslint-plugin-unicorn": "^44.0.0"
   },
@@ -37,7 +39,7 @@
     "eslint-plugin-react": "^7.31.7",
     "eslint-plugin-react-hooks": "^4.6.0"
   },
-  "peerDependencies": {
-    "eslint": "^8"
+  "publishConfig": {
+    "access": "public"
   }
 }
