--- a/.github/workflows/algolia-integrity.yml
+++ b/.github/workflows/algolia-integrity.yml
@@ -10,7 +10,9 @@ on:
       domain:
         type: string
         required: true
-        description: "The root domain and path that will prefix all URLs (ex: 'https://www.the-guild.dev/graphql/codegen/')"
+        description:
+          "The root domain and path that will prefix all URLs (ex:
+          'https://www.the-guild.dev/graphql/codegen/')"
       source:
         type: string
         required: true
@@ -64,7 +66,10 @@ jobs:
           workingDirectory: ${{ inputs.setupEnvWorkingDirectory }}
 
       - name: Algolia generate
-        run: ${{ inputs.packageManager }} run theguild-nextra-algolia -o ${{ inputs.lockFilePath }} --source '${{ inputs.source }}' --domain ${{ inputs.domain }} --docsBaseDir ${{ inputs.docsBaseDir }}
+        run:
+          ${{ inputs.packageManager }} run theguild-nextra-algolia -o ${{ inputs.lockFilePath }}
+          --source '${{ inputs.source }}' --domain ${{ inputs.domain }} --docsBaseDir ${{
+          inputs.docsBaseDir }}
         working-directory: ${{ inputs.websiteDirectory }}
 
       - name: Prettier
