--- a/.github/workflows/algolia-publish.yml
+++ b/.github/workflows/algolia-publish.yml
@@ -20,7 +20,9 @@ on:
       domain:
         type: string
         required: true
-        description: "The root domain and path that will prefix all URLs (ex: 'https://www.the-guild.dev/graphql/codegen/')"
+        description:
+          "The root domain and path that will prefix all URLs (ex:
+          'https://www.the-guild.dev/graphql/codegen/')"
       lockFilePath:
         type: string
         required: false
@@ -73,7 +75,10 @@ jobs:
           workingDirectory: ${{ inputs.setupEnvWorkingDirectory }}
 
       - name: Algolia push
-        run: ${{ inputs.packageManager }} run theguild-nextra-algolia --publish -o ${{ inputs.lockFilePath }} --source '${{ inputs.source }}' --domain ${{ inputs.domain }} --docsBaseDir ${{ inputs.docsBaseDir }}
+        run:
+          ${{ inputs.packageManager }} run theguild-nextra-algolia --publish -o ${{
+          inputs.lockFilePath }} --source '${{ inputs.source }}' --domain ${{ inputs.domain }}
+          --docsBaseDir ${{ inputs.docsBaseDir }}
         working-directory: ${{ inputs.websiteDirectory }}
         env:
           ALGOLIA_APP_ID: ${{ secrets.algoliaAppId }}
