--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -49,7 +49,9 @@ jobs:
         continue-on-error: ${{ github.event_name == 'pull_request' }}
 
       - name: annotate
-        if: ${{ github.event_name == 'pull_request' && inputs.annotations && github.event.pull_request.head.repo.full_name == github.repository }}
+        if:
+          ${{ github.event_name == 'pull_request' && inputs.annotations &&
+          github.event.pull_request.head.repo.full_name == github.repository }}
         uses: ataylorme/eslint-annotate-action@v2
         with:
           repo-token: ${{ secrets.githubToken }}
