--- a/.github/workflows/algolia-publish.yml
+++ b/.github/workflows/algolia-publish.yml
@@ -26,13 +26,13 @@ on:
       lockFilePath:
         type: string
         required: false
-        default: 'algolia-lockfile.json'
-        description: 'Relative path from `website/` to the Algolia lockfile'
+        default: algolia-lockfile.json
+        description: Relative path from `website/` to the Algolia lockfile
       docsBaseDir:
         type: string
         required: false
-        default: './src/pages/'
-        description: 'Relative path from `website/` to nextra markdown pages root folder'
+        default: ./src/pages/
+        description: Relative path from `website/` to nextra markdown pages root folder
       nodeVersion:
         required: false
         type: number
@@ -40,19 +40,19 @@ on:
       websiteDirectory:
         required: false
         type: string
-        default: './website/'
+        default: ./website/
       packageManager:
         type: string
         description: Package manager
         required: false
         default: yarn
       setupEnvWorkingDirectory:
-        description: 'workingDirectory for `setup-env` action'
+        description: workingDirectory for `setup-env` action
         required: false
         type: string
-        default: '.'
+        default: .
       skipCommitLockFile:
-        description: 'Prevent committing lockfile'
+        description: Prevent committing lockfile
         required: false
         type: boolean
         default: false
