--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,7 +26,7 @@ on:
       reportFile:
         required: false
         type: string
-        default: 'eslint_report.json'
+        default: eslint_report.json
     secrets:
       githubToken:
         required: false
