--- a/.github/workflows/release-snapshot.yml
+++ b/.github/workflows/release-snapshot.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: ${{ inputs.npmTag }} release
         id: changesets
-        uses: 'the-guild-org/changesets-snapshot-action@v0.0.1'
+        uses: the-guild-org/changesets-snapshot-action@v0.0.1
         with:
           tag: ${{ inputs.npmTag }}
           prepareScript: '${{inputs.packageManager}} run ${{ inputs.buildScript }}'
