--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -26,7 +26,7 @@ on:
       releasePrName:
         required: false
         type: string
-        default: 'Upcoming Release Changes'
+        default: Upcoming Release Changes
     secrets:
       githubToken:
         required: true
