--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@theguild/eslint-config",
   "version": "0.2.0",
+  "type": "commonjs",
   "description": "The Guild's shared ESLint config",
   "repository": {
     "url": "the-guild-org/shared-config",
@@ -10,8 +11,8 @@
   "license": "MIT",
   "private": false,
   "exports": {
-    ".": "./src/index.cjs",
-    "./*": "./src/*.cjs",
+    ".": "./src/index.js",
+    "./*": "./src/*.js",
     "./package.json": "./package.json"
   },
   "keywords": [
@@ -22,21 +23,23 @@
     "eslint": "^8"
   },
   "dependencies": {
-    "@rushstack/eslint-patch": "^1.1.4",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
+    "@rushstack/eslint-patch": "^1.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.3.0",
-    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-jsonc": "^2.5.0",
+    "eslint-plugin-n": "^15.4.0",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-sonarjs": "^0.16.0",
-    "eslint-plugin-unicorn": "^44.0.0"
+    "eslint-plugin-unicorn": "^44.0.2",
+    "eslint-plugin-yml": "^1.2.0"
   },
   "optionalDependencies": {
     "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-mdx": "^2.0.0",
-    "eslint-plugin-react": "^7.31.7",
+    "eslint-plugin-mdx": "^2.0.5",
+    "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0"
   },
   "publishConfig": {
