--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -38,6 +38,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       published: ${{ steps.changesets.outputs.published }}
+      publishedPackages: ${{ steps.changesets.outputs.publishedPackages }}
     steps:
       - name: checkout
         uses: actions/checkout@v3
