--- a/.github/workflows/release-snapshot.yml
+++ b/.github/workflows/release-snapshot.yml
@@ -36,6 +36,7 @@ jobs:
     if: github.event.pull_request.head.repo.full_name == github.repository
     outputs:
       published: ${{ steps.changesets.outputs.published }}
+      publishedPackages: ${{ steps.changesets.outputs.publishedPackages }}
     steps:
       - name: checkout
         uses: actions/checkout@v3
