--- a/.github/workflows/changesets-dependencies.yaml
+++ b/.github/workflows/changesets-dependencies.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   changeset:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: github.event.pull_request.head.repo.full_name == github.repository
     steps:
       - name: Checkout
