--- a/.github/workflows/release-snapshot.yml
+++ b/.github/workflows/release-snapshot.yml
@@ -32,7 +32,7 @@ on:
 
 jobs:
   snapshot:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: github.event.pull_request.head.repo.full_name == github.repository
     outputs:
       published: ${{ steps.changesets.outputs.published }}
