--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -35,7 +35,7 @@ on:
 
 jobs:
   publish:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     outputs:
       published: ${{ steps.changesets.outputs.published }}
       publishedPackages: ${{ steps.changesets.outputs.publishedPackages }}
