eslint config adjustments  (#122)
* run react rule on js/ts files, since it can be react hook without JSX extension

* numeric-separators-style should propose `1_000` style numbers

* rollback since 2020 will be 2_020

* adjust `import` config

* fixes for markdown and filenames when dynamic route next.js used

* fix

* add cspell

* add new words

* chore(dependencies): updated changesets for modified dependencies

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "echo No build command, skipping...",
+    "build": "echo No build command, skipping…",
+    "cspell": "cspell --gitignore **/*",
     "lint": "eslint --ignore-path .gitignore .",
     "lint:prettier": "prettier --ignore-path .gitignore --check .",
     "lint:remote": "eslint-remote-tester",
@@ -23,9 +24,9 @@
     "@theguild/eslint-config": "workspace:*",
     "@theguild/prettier-config": "workspace:*",
     "@types/eslint": "8.4.10",
-    "@types/node": "18.11.17",
+    "@types/node": "18.11.18",
+    "cspell": "6.17.0",
     "eslint": "8.30.0",
-    "eslint-plugin-n": "15.6.0",
     "eslint-remote-tester": "3.0.0",
     "patch-package": "6.5.0",
     "prettier": "2.8.1",
