--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -21,6 +21,7 @@
     "prettier": "^2"
   },
   "dependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "prettier-plugin-pkg": "^0.17.1",
     "prettier-plugin-sh": "^0.12.8"
   },
