--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -44,6 +44,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          token: ${{ secrets.githubToken }}
 
       - uses: the-guild-org/shared-config/setup@main
         name: setup env
