--- a/.github/workflows/changesets-dependencies.yaml
+++ b/.github/workflows/changesets-dependencies.yaml
@@ -7,6 +7,9 @@ on:
       installDependencies:
         type: boolean
         default: false
+      preCommit:
+        type: string
+        required: false
       packageManager:
         type: string
         required: false
@@ -39,5 +42,7 @@ jobs:
 
       - name: Create/Update Changesets
         uses: the-guild-org/changesets-dependencies-action@main
+        with:
+          preCommit: ${{ inputs.preCommit }}
         env:
           GITHUB_TOKEN: ${{ secrets.githubToken }}
